src/yapl/symbol/Symbolchecker.java
/* Generated By:JavaCC: Do not edit this line. Symbolchecker.java */
package yapl.compiler;
import yapl.interfaces.CompilerError;
import yapl.lib.CompilerMessage;
import yapl.symbol.Symboltable;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

/** CA2.3 */
public class Symbolchecker implements SymbolcheckerConstants {

    private static String programName = "";
    private static Symboltable symboltable = new Symboltable();

  /** Main entry point. */
  public static void main(String args[]) {

        if(args.length < 1){
            System.out.println("Not enough arguments! Please enter file path.");
            return;
        }
        try{
            Symbolchecker symbolchecker = new Symbolchecker(new FileInputStream(args[0]));
            symbolchecker.Program();
            CompilerMessage.printOK(programName);
        } catch (ParseException e) {
            CompilerMessage.printError(e, programName);
        } catch(TokenMgrError e) {
            CompilerMessage.printError(e, programName);
        } catch(Exception e){
            e.printStackTrace();
        }
   }

  static final public void Program() throws ParseException {
        Token t;
        String endIdent;
    jj_consume_token(6);
    t = jj_consume_token(ident);
        symboltable.openScope(true);
        symboltable.setParentSymbol(new Symbol(Symbol.Program, t.image, t.beginLine, t.beginColumn));
        programName = t.toString();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        Decl();
      } else if (jj_2_3(2)) {
        Procedure();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(7);
    StatementList();
    jj_consume_token(8);
    endIdent = jj_consume_token(ident);
        if(!programName.equals(endIdent)) {if (true) throw new YAPLException("", CompilerError.EndIdentMismatch, t.beginLine, t.beginColumn);}
        symboltable.closeScope();
    jj_consume_token(9);
    jj_consume_token(0);
  }

//Decls
  static final public void Decl() throws ParseException {
    jj_consume_token(10);
    label_2:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_5(2)) {
        ConstDecl();
      } else if (jj_2_6(2)) {
        VarDecl();
      } else if (jj_2_7(2)) {
        TypeDecl();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ConstDecl() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ident);
    jj_consume_token(12);
    Literal();
    jj_consume_token(13);
  }

  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(ident);
    label_3:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(14);
      jj_consume_token(ident);
    }
    jj_consume_token(13);
  }

  static final public void TypeDecl() throws ParseException {
    jj_consume_token(15);
    jj_consume_token(ident);
    VarDecl();
    label_4:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_4;
      }
      VarDecl();
    }
    jj_consume_token(16);
    jj_consume_token(13);
  }

//________________END OF DECs___________

//________________TYPEs_____________
  static final public void NonArrayType() throws ParseException {
    if (jj_2_10(2)) {
      jj_consume_token(17);
    } else if (jj_2_11(2)) {
      jj_consume_token(18);
    } else if (jj_2_12(2)) {
      jj_consume_token(ident);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type() throws ParseException {
    NonArrayType();
    label_5:
    while (true) {
      if (jj_2_13(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(19);
      jj_consume_token(20);
    }
  }

  static final public void ReturnType() throws ParseException {
    if (jj_2_14(2)) {
      jj_consume_token(21);
    } else if (jj_2_15(2)) {
      Type();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//________________END OF TYPEs________

//________________PROCEDUREs__________
  static final public void Procedure() throws ParseException {
    jj_consume_token(22);
    ReturnType();
    jj_consume_token(ident);
    jj_consume_token(23);
    if (jj_2_16(2)) {
      FormalParamList();
    } else {
      ;
    }
    jj_consume_token(24);
    Block();
    jj_consume_token(ident);
    jj_consume_token(13);
  }

  static final public void FormalParamList() throws ParseException {
    FormalParam();
    label_6:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(14);
      FormalParam();
    }
  }

  static final public void FormalParam() throws ParseException {
    Type();
    jj_consume_token(ident);
  }

//________________END OF PROCEDUREs____

//________________STATEMENTs___________
  static final public void StatementList() throws ParseException {
    label_7:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_7;
      }
      Statement();
      jj_consume_token(13);
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_19(2)) {
      IfStatement();
    } else if (jj_2_20(2)) {
      WhileStatement();
    } else if (jj_2_21(2)) {
      ReturnStatement();
    } else if (jj_2_22(2)) {
      WriteStatement();
    } else if (jj_2_23(2)) {
      Assignment();
    } else if (jj_2_24(2)) {
      ProcedureCall();
    } else if (jj_2_25(2)) {
      Block();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void WriteStatement() throws ParseException {
    jj_consume_token(25);
    jj_consume_token(string);
  }

  static final public void ReturnStatement() throws ParseException {
    jj_consume_token(26);
    if (jj_2_26(2)) {
      Expr();
    } else {
      ;
    }
  }

  static final public void WhileStatement() throws ParseException {
    jj_consume_token(27);
    Expr();
    jj_consume_token(28);
    StatementList();
    jj_consume_token(29);
  }

  static final public void IfStatement() throws ParseException {
    jj_consume_token(30);
    Expr();
    jj_consume_token(31);
    StatementList();
    if (jj_2_27(2)) {
      jj_consume_token(32);
      StatementList();
    } else {
      ;
    }
    jj_consume_token(33);
  }

  static final public void Assignment() throws ParseException {
    jj_consume_token(ident);
    if (jj_2_28(2)) {
      Selector();
    } else {
      ;
    }
    jj_consume_token(34);
    Expr();
  }

  static final public void ProcedureCall() throws ParseException {
    jj_consume_token(ident);
    jj_consume_token(23);
    if (jj_2_29(2)) {
      ArgumentList();
    } else {
      ;
    }
    jj_consume_token(24);
  }

  static final public void ArgumentList() throws ParseException {
    Expr();
    label_8:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(14);
      Expr();
    }
  }

  static final public void Block() throws ParseException {
    if (jj_2_31(2)) {
      Decl();
    } else {
      ;
    }
    jj_consume_token(7);
    StatementList();
    jj_consume_token(8);
  }

//________________END OF STATEMENTs_____

//_______________EXPRESSIONs________
  static final public void Expr() throws ParseException {
    if (jj_2_33(2)) {
      CondAndExpr();
      label_9:
      while (true) {
        if (jj_2_32(2)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(35);
        CondAndExpr();
      }
    } else if (jj_2_34(2)) {
      CreationExpr();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void CreationExpr() throws ParseException {
    jj_consume_token(36);
    NonArrayType();
    label_10:
    while (true) {
      if (jj_2_35(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(19);
      Expr();
      jj_consume_token(20);
    }
  }

  static final public void CondAndExpr() throws ParseException {
    EqualExpr();
    label_11:
    while (true) {
      if (jj_2_36(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(37);
      EqualExpr();
    }
  }

  static final public void EqualExpr() throws ParseException {
    RelExpr();
    if (jj_2_37(2)) {
      EqualOp();
      RelExpr();
    } else {
      ;
    }
  }

  static final public void RelExpr() throws ParseException {
    AddExpr();
    if (jj_2_38(2)) {
      RelOp();
      AddExpr();
    } else {
      ;
    }
  }

  static final public void AddExpr() throws ParseException {
    MulExpr();
    label_12:
    while (true) {
      if (jj_2_39(2)) {
        ;
      } else {
        break label_12;
      }
      AddOp();
      MulExpr();
    }
  }

  static final public void MulExpr() throws ParseException {
    UnaryExpr();
    label_13:
    while (true) {
      if (jj_2_40(2)) {
        ;
      } else {
        break label_13;
      }
      MulOp();
      UnaryExpr();
    }
  }

  static final public void UnaryExpr() throws ParseException {
    if (jj_2_41(2)) {
      AddOp();
    } else {
      ;
    }
    PrimaryExpr();
  }

  static final public void PrimaryExpr() throws ParseException {
    if (jj_2_43(2)) {
      Literal();
    } else if (jj_2_44(2)) {
      jj_consume_token(23);
      Expr();
      jj_consume_token(24);
    } else if (jj_2_45(2)) {
      ProcedureCall();
    } else if (jj_2_46(2)) {
      jj_consume_token(ident);
      if (jj_2_42(2)) {
        Selector();
      } else {
        ;
      }
    } else if (jj_2_47(2)) {
      ArrayLen();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ArrayLen() throws ParseException {
    jj_consume_token(38);
    jj_consume_token(ident);
    if (jj_2_48(2)) {
      Selector();
    } else {
      ;
    }
  }

  static final public void Selector() throws ParseException {
    if (jj_2_49(2)) {
      jj_consume_token(19);
      Expr();
      jj_consume_token(20);
    } else if (jj_2_50(2)) {
      jj_consume_token(9);
      jj_consume_token(ident);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_51(2)) {
      Selector();
    } else {
      ;
    }
  }

  static final public void Literal() throws ParseException {
    if (jj_2_52(2)) {
      jj_consume_token(39);
    } else if (jj_2_53(2)) {
      jj_consume_token(40);
    } else if (jj_2_54(2)) {
      jj_consume_token(number);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//_______________END OF EXPRESSIONs____

//__________________OPs_______________
  static final public void RelOp() throws ParseException {
    if (jj_2_55(2)) {
      jj_consume_token(41);
    } else if (jj_2_56(2)) {
      jj_consume_token(42);
    } else if (jj_2_57(2)) {
      jj_consume_token(43);
    } else if (jj_2_58(2)) {
      jj_consume_token(44);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EqualOp() throws ParseException {
    if (jj_2_59(2)) {
      jj_consume_token(45);
    } else if (jj_2_60(2)) {
      jj_consume_token(46);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AddOp() throws ParseException {
    if (jj_2_61(2)) {
      jj_consume_token(47);
    } else if (jj_2_62(2)) {
      jj_consume_token(48);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MulOp() throws ParseException {
    if (jj_2_63(2)) {
      jj_consume_token(49);
    } else if (jj_2_64(2)) {
      jj_consume_token(50);
    } else if (jj_2_65(2)) {
      jj_consume_token(51);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  static private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  static private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  static private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  static private boolean jj_2_53(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_53(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(52, xla); }
  }

  static private boolean jj_2_54(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_54(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(53, xla); }
  }

  static private boolean jj_2_55(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_55(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(54, xla); }
  }

  static private boolean jj_2_56(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_56(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(55, xla); }
  }

  static private boolean jj_2_57(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_57(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(56, xla); }
  }

  static private boolean jj_2_58(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_58(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(57, xla); }
  }

  static private boolean jj_2_59(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_59(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(58, xla); }
  }

  static private boolean jj_2_60(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_60(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(59, xla); }
  }

  static private boolean jj_2_61(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_61(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(60, xla); }
  }

  static private boolean jj_2_62(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_62(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(61, xla); }
  }

  static private boolean jj_2_63(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_63(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(62, xla); }
  }

  static private boolean jj_2_64(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_64(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(63, xla); }
  }

  static private boolean jj_2_65(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_65(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(64, xla); }
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(26)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_26()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(25)) return true;
    if (jj_scan_token(string)) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_47() {
    if (jj_3R_46()) return true;
    return false;
  }
